  network tracing was enabled.


C++ Changes
===========

- Added support for clang compiler on Mac OS X.

- Fixed issue where connection on a remote address would always fail
  with an assert on Windows 8.


Visual Studio Add-in Changes
============================

- Fixed a bug that affects Visual Studio C++ projects that build 
  static libraries.


C# Changes
==========

- Minor marshalling/un-marhsalling performance improvement (removed
  virtual specifier from streaming class).

- Added missing throwLocalException method to Ice.AsyncResult
  interface.


Java Changes
============

- Fixed a bug in the generated code for a Slice exception with no
  data members: constructors are now generated correctly.

- Fixed an IceSSL bug in which the IceSSL.Alias property was not
  working correctly.


======================================================================
Changes since version 3.4.1
======================================================================


General Changes
===============

- The operation mode sent over the wire for the Object operations
  ice_ping, ice_isA, ice_ids, and ice_id should be Nonmutating, but
  the language mappings were inconsistent in this respect. All
  language mappings now send the correct mode.

- Fixed a bug where under certain circumstances, Ice would
  indefinitely re-try to add a proxy to the Glacier2 routing table.

- Improved queuing of Glacier2 requests to the client to not invoke
  requests if the client connection already has requests pending for
  send. Instead, Glacier2 waits for the pending requests to be
  sent. This allow request overriding to occur more often when the
  client connection is slow.

- Fixed bug where an IceGrid node or registry could hang for a long
  time on startup if some IceGrid registry replicas weren't reachable.

- Added throwLocalException method to the Ice AsyncResult class. If
  the request fails with a local exception, this method throws the
  local exception.
