@@ -65,6 +65,13 @@ Visual Studio Add-in Changes
 - Fixed a bug that affects Visual Studio C++ projects that build 
   static libraries.
 
+- Fixed a bug that could cause Visual Studio to hang opeing or building
+  solutions containing a large number of projects.
+
+- Fixed a bug that afects Visual Studio clean, an exception was throw
+  when try to removed generated files and the user is not authorized to
+  remove the files.
+
 
 C# Changes
 ==========
